5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1649_2704.log
== TEST (2019-04-09 18:38:58) 
-- CODE:
nota=float(imput("nota de 0 a 10:"))
bonificacao=imput("Bonificacao S ou N")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	nota >=5
	print(nota + 10%)
else:
	print(nota)
-- ERROR:
File "XXXX", line 6
    print(nota + 10%)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:48:33) 
-- CODE:
nota=float(input("nota de 0 a 10:"))
bonificacao=input("Bonificacao S ou N")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	nota =  nota+nota*0.1
	print(nota)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:48:51) 
-- CODE:
nota=float(input("nota de 0 a 10:"))
bonificacao=input("Bonificacao S ou N")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	nota =  nota+nota*0.1
	print(nota)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:48:53) 
-- CODE:
nota=float(input("nota de 0 a 10:"))
bonificacao=input("Bonificacao S ou N")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	nota =  nota+nota*0.1
	print(nota)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:49:09) 
-- CODE:
nota=float(input("nota de 0 a 10: "))
bonificacao=input("Bonificacao S ou N: ")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	nota =  nota+nota*0.1
	print(nota)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:50:07) 
-- CODE:
nota=float(input("nota de 0 a 10: "))
bonificacao=input("Bonificacao S ou N: ")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	nota =  nota+nota*0.1
	print(nota)
else:
	print(nota)
-- EXECUTION TIME:
0.129784
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:55:54) 
-- CODE:
#
nota=float(input("nota de 0 a 10: "))
bonificacao=input("Bonificacao S ou N: ")
bonificacao=bonificacao.upper()
if (bonificacao== S ):
	nota =  nota+nota*0.1
	print(nota)
else:
	print(nota)
-- EXECUTION TIME:
0.167118
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2704/main.py", line 5, in <module>
    if (bonificacao== S ):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:59:02) 
-- CODE:
nota=float(input("digite uma nota: "))
bonificacao=input("bonificacao S ou N: ")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	mensagem= nota*0.1
	print(mensagem)
else:
	print(nota)
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:02:50) 
-- CODE:
nota=float(input("digite uma nota: "))
bonificacao=input("bonificacao S ou N: ")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	mensagem= nota + nota*0.1
	print(mensagem)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:03:00) 
-- CODE:
nota=float(input("digite uma nota: "))
bonificacao=input("bonificacao S ou N: ")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	mensagem= nota + nota*0.1
	print(mensagem)
else:
	print(nota)
-- EXECUTION TIME:
0.135564
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:05:33) 
-- CODE:
nota=float(input("digite uma nota: "))
bonificacao=input("bonificacao S ou N: ")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	mensagem= nota + nota*10/1000
	print(mensagem)
else:
	print(nota)
-- OUTPUT:
5.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:05:51) 
-- CODE:
nota=float(input("digite uma nota: "))
bonificacao=input("bonificacao S ou N: ")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	mensagem= nota + nota*10/100
	print(mensagem)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:06:00) 
-- CODE:
nota=float(input("digite uma nota: "))
bonificacao=input("bonificacao S ou N: ")
bonificacao=bonificacao.upper()
if bonificacao=="S":
	mensagem= nota + nota*10/100
	print(mensagem)
else:
	print(nota)
-- EXECUTION TIME:
0.190058
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
